syntax = "proto3";

option go_package = "./proto";

import "google/protobuf/empty.proto";

package proto;

service GODFS{
    rpc getAvailableDatanodes (google.protobuf.Empty) returns (freeDataNodes);
    rpc sendDataToDataNodes(clientToDataNodeRequest) returns (Error);
}

message freeDataNodes{
    repeated string dataNodeIDs = 1;
}

message clientToDataNodeRequest{
    string blockID = 1;
    bytes content = 2;
}

message Error{
    string err = 1;
}
