syntax = "proto3";

option go_package = "./proto";

import "google/protobuf/empty.proto";

package proto;

service NamenodeService{
    rpc getAvailableDatanodes (google.protobuf.Empty) returns (freeDataNodes);
    rpc register_DataNode(datanodeData) returns (status);
}

message freeDataNodes{
    repeated datanodeData dataNodeIDs = 1;
}

message datanodeData{
    string datanodeID = 1;
    string datanodePort = 2;
}

message status{
    string statusMessage = 1;
}